--- a/WebContent/getOne.html
+++ b/WebContent/getOne.html
@@ -2,9 +2,22 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+<script type="text/javascript">js/jquery.min.js</script>
 <title>用Ajax以json方式获取单个对象</title>
 </head>
 <body>
-
+	<button id="getOne">点击获取json对象</button>
+	<div id="msg"></div>
 </body>
+<script type="text/javascript">
+	$("#getOne").click(function(){
+		var url = "getOneCategory";
+		$.post({
+			url,
+			function(data){
+				
+			}
+		});
+	});
+</script>
 </html>
