--- a/WebContent/getOne.html
+++ b/WebContent/getOne.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-<script type="text/javascript">js/jquery.min.js</script>
-<title>用Ajax以json方式获取单个对象</title>
+	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+	<title>用Ajax以json方式获取单个对象</title>
+	<script src="js/jquery.min.js"></script>
 </head>
 <body>
 	<button id="getOne">点击获取json对象</button>
@@ -15,7 +15,8 @@
 		$.post({
 			url,
 			function(data){
-				
+				var json = JSON.parse(data);
+				alert(json);
 			}
 		});
 	});
